# src/modules/accessControl/domain/entities/ent.Permiso.ts
@@ -1,0 +1,9 @@
+export class entPermiso {
+    constructor(
+        public readonly idPermiso: number | null,
+        public readonly cNombrePermiso: string,
+        public readonly cAbrevPermiso: string | null = null,
+        public readonly lActivo: boolean = true,
+        public readonly lVigente: boolean = true
+    ) {}
+}
