# swagger.yaml
@@ -15,6 +15,8 @@ tags:
     description: Administracion de usuarios
   - name: Perfiles
     description: Administracion de perfiles de usuario
+  - name: AccessControl
+    description: Administracion de Roles y Permisos
 
 paths:
   /v1/auth/register:
@@ -222,6 +224,76 @@ paths:
               example:
                 nSuccess: true
                 cMessage: Perfil eliminado correctamente
+        '401':
+          $ref: '#/components/responses/AppError'
+        '500':
+          $ref: '#/components/responses/InternalError'
+
+  /v1/access-control/roles:
+    post:
+      tags:
+        - AccessControl
+      summary: Crear Rol
+      description: Crea un nuevo rol y lo asocia automaticamente a todos los permisos vigentes.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [cNombreRol]
+              properties:
+                cNombreRol:
+                  type: string
+                  example: Administrador de Sistema
+                cAbrevRol:
+                  type: string
+                  example: AdminSys
+                lActivo:
+                  type: boolean
+                  example: true
+      responses:
+        '201':
+          description: Rol creado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '401':
+          $ref: '#/components/responses/AppError'
+        '500':
+          $ref: '#/components/responses/InternalError'
+
+  /v1/access-control/permissions:
+    post:
+      tags:
+        - AccessControl
+      summary: Crear Permiso
+      description: Crea un nuevo permiso y lo asocia automaticamente a todos los roles vigentes.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [cNombrePermiso]
+              properties:
+                cNombrePermiso:
+                  type: string
+                  example: EDITAR_USUARIOS
+                cAbrevPermiso:
+                  type: string
+                  example: edit_users
+                lActivo:
+                  type: boolean
+                  example: true
+      responses:
+        '201':
+          description: Permiso creado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
         '401':
           $ref: '#/components/responses/AppError'
         '500':
